poc of recipe parsing

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@
 # Drizzle
 DATABASE_URL="postgresql://postgres:password@localhost:5432/recipe-assistant"
 
-# Example:
-# SERVERVAR="foo"
-# NEXT_PUBLIC_CLIENTVAR="bar"
+OPENAI_API_KEY="1234"
+LANGCHAIN_TRACING_V2=true
+LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
+LANGCHAIN_API_KEY="<your-api-key>"
+LANGCHAIN_PROJECT="recipe-assistant"
+LANGCHAIN_CALLBACKS_BACKGROUND="true"
