--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@langchain/core": "^0.1.63",
+    "@langchain/openai": "^0.0.30",
     "@t3-oss/env-nextjs": "^0.10.1",
     "drizzle-orm": "^0.29.4",
     "geist": "^1.3.0",
